@@ -23,6 +23,8 @@ dev
 19. Allow using detailed sub-toolbar for playlists, if playlist image support
     is enabled.
 20. Add text play/add/shuffle buttons for track lists if in width range.
+21. If showing detailed sub-toolbar and view is too narrow for image then show
+    a semi-transparent (and fading) version on right.
 
 5.11.5
 ------
